--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class='container'>
     <h1 class='header'>goat pi</h1>
-    <app-images></app-images>
-
+    
+    <app-image-list></app-image-list>
+    <!-- <app-images></app-images> -->
     <router-outlet></router-outlet>
 </div>
