prep client for prod deploy

--- a/client/src/app/image-dates/image-dates.component.html
+++ b/client/src/app/image-dates/image-dates.component.html
@@ -1,8 +1,14 @@
 <div *ngIf="datesData | async as dates; else loading">
-    <div *ngFor="let date of dates" (click)="onSelectDate(date)">{{date}}</div>
-</div>
---------------------------  
-<ng-template #loading>
-    <div class="loading">Loading dates...</div>
-</ng-template>
+  <mat-form-field>
+    <mat-label>Select a date</mat-label>
+    <mat-select  (selectionChange)="onSelectDate($event)">
+      <mat-option *ngFor="let date of dates.slice().reverse()" [value]="date">
+        {{date}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 
+</div>
+<ng-template #loading>
+  <div class="loading">Loading dates...</div>
+</ng-template>
