--- a/client/src/app/images/images.component.css
+++ b/client/src/app/images/images.component.css
@@ -1,9 +1,9 @@
 .goatcam_card {
     max-width: 800px;
   }
-  
-  .example-header-image {
-    background-image: url('http://localhost:3111/image');
-    background-size: cover;
-  }
+
+.goat-header-image {
+  background-image: url('./goat.png');
+  background-size: cover;
+}
   
