--- a/client/src/app/images/images.component.html
+++ b/client/src/app/images/images.component.html
@@ -1,8 +1,7 @@
 <mat-card class="goatcam_card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Goat Pi</mat-card-title>
-    <mat-card-subtitle>Goat Cam</mat-card-subtitle>
+    <div mat-card-avatar class="goat-header-image"></div>
+    <mat-card-title>Latest Goat Pic</mat-card-title>
   </mat-card-header>
   <img mat-card-image src={{imageUrl}} alt="Image from the goat camera.">
   <mat-card-content>
@@ -10,7 +9,4 @@
       {{cardContent}}
     </p>
   </mat-card-content>
-  <mat-card-actions>
-    <!-- <button mat-button>More Images</button> -->
-  </mat-card-actions>
 </mat-card>
